# mos-cv

./: .gitignore  CMakeLists.txt  Makefile  README.md  Untitled  build.sh  main.c  main.h
.cache/clangd/index/: carrier.c.0A4B26230A417701.idx  carrier.h.4CB3E8FEA6C1B3C7.idx  common.h.321780036B09E4FC.idx  common.h.67B4F3F2C87786F2.idx  fileio.c.6E786413EB1F6959.idx  fileio.h.7CDEDAD991D65A78.idx  (+9 more)
carrier_continuity/: carrier.c  carrier.h  carrier_naman.c  carriermogged.c  carriermogged_log.c  carriertest.c  rough.py  savefile.c
carrier_continuity/pythontesting/: equation.ipynb
carrier_steady_state/: carrier_ss.h  carriermogged_ss.c
fileio/: fileio.c  fileio.h
parameter_fetch/: parameter-fetch.c  parameter_fetch.c  parameter_fetch.h
plots/: g1e20.csv  g1e20_new.csv  g1e23.csv  g1e24.csv  g1e25.csv  g1e26.csv  g1e27.csv  g1e28.csv  g1e29.csv  g1e30.csv  g1e31.csv  g5e26.csv  plot_derivative.py
plots/newplots/: g1e22.txt  g1e23.txt  g1e24.txt  g1e26.txt  g1e28.txt  g1e29.txt  g1e30.txt  g1e31.txt  g3e27.txt  g5e27.txt  g5e28.txt  mos_cv  output1.txt  output6.txt  param.txt  param1.txt  param10.txt  param2.txt  param3.txt  param4.txt  param5.txt  param6.txt  param7.txt  param9.txt  plot.gp
poisson/: poisson.c  poisson.h  poisson_alternative.c  poisson_post_meet.c  poisson_test.c  poisson_uniform_linear.c  poissontest.c
solve_c/: .solve_c.c.kate-swp  oldparam.c  solve_c.c  solve_c.h
src/: main.c  main.h
src/carrier_continuity/: carrier.c  carrier.h
src/common/: common.c  common.h
src/fileio/: fileio.h
src/parameter_fetch/: parameter_fetch.c  parameter_fetch.h
src/poisson/: poisson.c  poisson.h
src/solve_c/: solve_c.c  solve_c.h
src/thomas/: thomas.c  thomas.h
